--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -36,12 +36,16 @@
         "import seaborn as sns\n",
         "\n",
         "# Set seaborn style for better visualization\n",
-        "plt.style.use('seaborn-darkgrid')\n",
-        "\n",
-        "#Insights:\n",
-        "#Imported pandas, numpy, matplotlib, and seaborn for data handling and visualization.\n",
-        "#These libraries help in data manipulation, statistical computations, and visual analysis."
+        "plt.style.use('seaborn-darkgrid')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "qB24GJyyLWRP"
+      },
+      "id": "qB24GJyyLWRP"
     },
     {
       "cell_type": "code",
@@ -269,13 +273,20 @@
         "    metadata = pd.read_csv(metadata_country_path)\n",
         "\n",
         "    # Display first few rows\n",
-        "    df.head()\n",
-        "\n",
-        "    #Insights:\n",
-        "\n",
-        "    #The dataset contains country-wise agricultural water withdrawal percentages over time (1960-2023).\n",
-        "    #Metadata includes regions and income group classifications for better segmentation."
+        "    df.head()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights:**\n",
+        "The dataset contains country-wise agricultural water withdrawal percentages over time (1960-2023).\n",
+        "Metadata includes regions and income group classifications for better segmentation."
+      ],
+      "metadata": {
+        "id": "gdbgWOAALggK"
+      },
+      "id": "gdbgWOAALggK"
     },
     {
       "cell_type": "code",
@@ -315,13 +326,19 @@
         "df['Year'] = pd.to_numeric(df['Year'], errors='coerce')\n",
         "\n",
         "# Display updated dataset structure\n",
-        "df.info()\n",
-        "\n",
-        "# Insights:\n",
-        "# Dropped redundant columns (Indicator Name, Indicator Code) as they contain static values.\n",
-        "# Converted the dataset from wide format to long format, making it easier for time-series analysis.\n",
-        "\n"
+        "df.info()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights:**Dropped redundant columns (Indicator Name, Indicator Code) as they contain static values.\n",
+        "Converted the dataset from wide format to long format, making it easier for time-series analysis."
+      ],
+      "metadata": {
+        "id": "0dePdtMBMPlH"
+      },
+      "id": "0dePdtMBMPlH"
     },
     {
       "cell_type": "code",
