--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -479,14 +479,20 @@
         "df = df.merge(df_pivot[['Country Name', 'Change (1990-2020)']], on='Country Name', how='left')\n",
         "\n",
         "# Display feature engineered dataset\n",
-        "df.head()\n",
-        "\n",
-        "\n",
-        "# Insights:\n",
-        "# Merged region & income group to analyze geographic and economic factors.\n",
-        "# Added latest available water withdrawal values per country.\n",
-        "# Computed historical changes (1990-2020) to identify increasing or decreasing trends."
+        "df.head()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights:**Merged region & income group to analyze geographic and economic factors.\n",
+        "Added latest available water withdrawal values per country.\n",
+        "Computed historical changes (1990-2020) to identify increasing or decreasing trends."
+      ],
+      "metadata": {
+        "id": "px5S4lOvOy0z"
+      },
+      "id": "px5S4lOvOy0z"
     },
     {
       "cell_type": "code",
