--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -527,12 +527,19 @@
         "df['Agricultural Water Withdrawal (%)'] = df.groupby('Country Name')['Agricultural Water Withdrawal (%)'].ffill()\n",
         "\n",
         "# Check missing values\n",
-        "df.isnull().sum()\n",
-        "\n",
-        "# Insights:\n",
-        "# Missing values are forward-filled assuming gradual changes over time.\n",
-        "# Ensures time-series continuity without introducing major biases.\n"
+        "df.isnull().sum()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights:**Missing values are forward-filled assuming gradual changes over time.\n",
+        "Ensures time-series continuity without introducing major biases.\n"
+      ],
+      "metadata": {
+        "id": "JED5_wSbQMKo"
+      },
+      "id": "JED5_wSbQMKo"
     },
     {
       "cell_type": "code",
