--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -651,12 +651,19 @@
         "summary_stats = df.describe()\n",
         "\n",
         "# Display statistical summary\n",
-        "summary_stats\n",
-        "\n",
-        "# Insights:\n",
-        "# The mean water withdrawal percentage is around 55%, with some countries relying heavily on agriculture (>90%).\n",
-        "# Data distribution is bimodal, with most countries either having low or high dependency."
+        "summary_stats"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**:The mean water withdrawal percentage is around 55%, with some countries relying heavily on agriculture (>90%).\n",
+        "Data distribution is bimodal, with most countries either having low or high dependency."
+      ],
+      "metadata": {
+        "id": "NtOkrvSnQvAa"
+      },
+      "id": "NtOkrvSnQvAa"
     },
     {
       "cell_type": "code",
