--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -792,11 +792,19 @@
         "                              (df['Agricultural Water Withdrawal (%)'].max() - df['Agricultural Water Withdrawal (%)'].min())\n",
         "\n",
         "# Display normalized dataset\n",
-        "df.head(5)\n",
-        "\n",
-        "# Normalized values help compare countries on a standard scale (0 to 1).\n",
-        "# Useful for clustering and machine learning models.\n"
+        "df.head(5)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**:Normalized values help compare countries on a standard scale (0 to 1).\n",
+        "Useful for clustering and machine learning models.\n"
+      ],
+      "metadata": {
+        "id": "WpfucIP9RP6W"
+      },
+      "id": "WpfucIP9RP6W"
     },
     {
       "cell_type": "code",
