--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1071,12 +1071,18 @@
         "income_stats = df.groupby('IncomeGroup')['Agricultural Water Withdrawal (%)'].describe()\n",
         "\n",
         "# Display summary\n",
-        "income_stats\n",
-        "\n",
-        "# Insights:\n",
-        "# Low-income countries use ~90% of their water for agriculture, while high-income countries use only ~30%.\n",
-        "# This confirms that economic development reduces agricultural water dependency."
+        "income_stats"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**:Low-income countries use ~90% of their water for agriculture, while high-income countries use only ~30%. This confirms that economic development reduces agricultural water dependency."
+      ],
+      "metadata": {
+        "id": "bdoqKBNURz2h"
+      },
+      "id": "bdoqKBNURz2h"
     },
     {
       "cell_type": "code",
