--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1213,13 +1213,19 @@
         "plt.title(\"Distribution of Agricultural Water Withdrawal (%)\")\n",
         "plt.xlabel(\"Agricultural Water Withdrawal (%)\")\n",
         "plt.ylabel(\"Frequency\")\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Insights:\n",
-        "# Bimodal distribution: Many countries either have very high (>80%) or very low (<20%) agricultural water withdrawals.\n",
-        "# Indicates that economic structure and climate affect water use patterns."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**:Bimodal distribution: Many countries either have very high (>80%) or very low (<20%) agricultural water withdrawals.\n",
+        "Indicates that economic structure and climate affect water use patterns."
+      ],
+      "metadata": {
+        "id": "dqL1l3xwSRlZ"
+      },
+      "id": "dqL1l3xwSRlZ"
     },
     {
       "cell_type": "code",
