--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1254,12 +1254,18 @@
         "sns.boxplot(x='Region', y='Agricultural Water Withdrawal (%)', data=df)\n",
         "plt.xticks(rotation=45)\n",
         "plt.title(\"Agricultural Water Withdrawal (%) by Region\")\n",
-        "plt.show()\n",
-        "\n",
-        "# Insights:\n",
-        "# South Asia & Sub-Saharan Africa have the highest agricultural water withdrawals.\n",
-        "# Europe & North America have the lowest percentages, indicating diversified economies."
+        "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: South Asia & Sub-Saharan Africa have the highest agricultural water withdrawals. Europe & North America have the lowest percentages, indicating diversified economies."
+      ],
+      "metadata": {
+        "id": "qrj45BBGSkUD"
+      },
+      "id": "qrj45BBGSkUD"
     },
     {
       "cell_type": "code",
