--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1299,15 +1299,19 @@
         "plt.xlabel('Year')\n",
         "plt.ylabel('Agricultural Water Withdrawal (%)')\n",
         "plt.legend()\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Insights:\n",
-        "\n",
-        "# India remains consistently high (~90%), indicating continued reliance on irrigation.\n",
-        "# China has significantly reduced its agricultural water share (~85% to ~60% since 1980).\n",
-        "# Developed nations (e.g., USA, Australia) show a gradual decline, reflecting economic shifts."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**:India remains consistently high (~90%), indicating continued reliance on irrigation.\n",
+        "China has significantly reduced its agricultural water share (~85% to ~60% since 1980). Developed nations (e.g., USA, Australia) show a gradual decline, reflecting economic shifts."
+      ],
+      "metadata": {
+        "id": "lDCwmgP4TF1V"
+      },
+      "id": "lDCwmgP4TF1V"
     },
     {
       "cell_type": "code",
