--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1339,12 +1339,19 @@
         "plt.figure(figsize=(12, 8))\n",
         "sns.heatmap(df_corr, cmap=\"coolwarm\", annot=False)\n",
         "plt.title('Correlation Matrix of Agricultural Water Withdrawals Across Years')\n",
-        "plt.show()\n",
-        "\n",
-        "# Insights:\n",
-        "# High correlation (0.9+) across decades: Countries that had high water use in the 1990s still tend to have high values today.\n",
-        "# This indicates that agricultural water use is persistent over time."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **Insights**: High correlation (0.9+) across decades: Countries that had high water use in the 1990s still tend to have high values today.\n",
+        "This indicates that agricultural water use is persistent over time."
+      ],
+      "metadata": {
+        "id": "cFXUdreITcCn"
+      },
+      "id": "cFXUdreITcCn"
     },
     {
       "cell_type": "code",
