--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1379,12 +1379,19 @@
         "sns.boxplot(x='IncomeGroup', y='Agricultural Water Withdrawal (%)', data=df)\n",
         "plt.xticks(rotation=45)\n",
         "plt.title(\"Agricultural Water Withdrawal (%) by Income Group\")\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Low-income countries use ~90% of their water for agriculture, while high-income countries use only ~30%.\n",
-        "# Economic growth correlates with a shift away from agriculture-dominated water usage.\n"
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: Low-income countries use ~90% of their water for agriculture, while high-income countries use only ~30%.\n",
+        "Economic growth correlates with a shift away from agriculture-dominated water usage.\n"
+      ],
+      "metadata": {
+        "id": "FeOIdqgwUGkI"
+      },
+      "id": "FeOIdqgwUGkI"
     },
     {
       "cell_type": "code",
