--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1423,13 +1423,19 @@
         "plt.xlabel(\"Year\")\n",
         "plt.ylabel(\"Agricultural Water Withdrawal (%)\")\n",
         "plt.legend(title=\"Region\", bbox_to_anchor=(1, 1))\n",
-        "plt.show()\n",
-        "\n",
-        "# Insights:\n",
-        "\n",
-        "# South Asia & Middle East remain high (~90%), indicating strong agricultural dependence.\n",
-        "# Europe & North America show a steady decline, suggesting a transition to industry & urban water use.\n"
+        "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: South Asia & Middle East remain high (~90%), indicating strong agricultural dependence.\n",
+        "Europe & North America show a steady decline, suggesting a transition to industry & urban water use.\n"
+      ],
+      "metadata": {
+        "id": "54cxqahJUaR3"
+      },
+      "id": "54cxqahJUaR3"
     },
     {
       "cell_type": "code",
