--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1471,11 +1471,19 @@
         "plt.xlabel(\"Year\")\n",
         "plt.ylabel(\"Agricultural Water Withdrawal (%)\")\n",
         "plt.legend()\n",
-        "plt.show()\n",
-        "\n",
-        "# This plot helps in understanding how water withdrawals have evolved over decades in the top agricultural water-consuming countries.\n",
-        "# Countries with high withdrawals may show stable, increasing, or declining trends depending on their economic and environmental policies."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: This plot helps in understanding how water withdrawals have evolved over decades in the top agricultural water-consuming countries.\n",
+        "Countries with high withdrawals may show stable, increasing, or declining trends depending on their economic and environmental policies."
+      ],
+      "metadata": {
+        "id": "usKRvp2DUt7W"
+      },
+      "id": "usKRvp2DUt7W"
     },
     {
       "cell_type": "code",
