--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1515,11 +1515,18 @@
         "plt.title(\"Heatmap of Agricultural Water Withdrawals Over Time\")\n",
         "plt.xlabel(\"Year\")\n",
         "plt.ylabel(\"Country\")\n",
-        "plt.show()\n",
-        "\n",
-        "# This heatmap visualizes temporal variations in agricultural water use for different countries.\n",
-        "# Darker shades indicate higher water withdrawal, helping to identify periods of extreme dependency."
+        "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: This heatmap visualizes temporal variations in agricultural water use for different countries. Darker shades indicate higher water withdrawal, helping to identify periods of extreme dependency."
+      ],
+      "metadata": {
+        "id": "T4lwUZF0VDtz"
+      },
+      "id": "T4lwUZF0VDtz"
     },
     {
       "cell_type": "code",
