--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1569,6 +1569,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 2. Data Cleaning and Reshaping"
+      ],
+      "metadata": {
+        "id": "nEF5cStuWuSW"
+      },
+      "id": "nEF5cStuWuSW"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "ba97ec19-776c-4577-b584-a9fd7dda0619",
@@ -1577,7 +1587,6 @@
       },
       "outputs": [],
       "source": [
-        "# 2. Data Cleaning and Reshaping\n",
         "# Filter out aggregate or regional entries by dropping rows with missing Region (non-country entries)\n",
         "merged = merged[~merged['Region'].isna()].copy()\n",
         "\n",
@@ -1591,9 +1600,19 @@
         ")\n",
         "\n",
         "# Convert Year to numeric and drop rows with missing target values\n",
-        "long_df['Year'] = long_df['Year'].astype(int)\n",
+        "long_df['Year'] = long_df['Year'].astype(int) m\n",
         "long_df = long_df.dropna(subset=['WithdrawalPerc'])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Feature Encoding"
+      ],
+      "metadata": {
+        "id": "teANFlmeW4US"
+      },
+      "id": "teANFlmeW4US"
     },
     {
       "cell_type": "code",
@@ -1604,7 +1623,6 @@
       },
       "outputs": [],
       "source": [
-        "# 3. Feature Encoding\n",
         "# One-hot encode Region and IncomeGroup using pandas get_dummies\n",
         "features = ['Year', 'Region', 'IncomeGroup']\n",
         "X = long_df[features]\n",
