--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1571,7 +1571,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2. Data Cleaning and Reshaping"
+        "# 2. Data Cleaning and Reshaping\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "nEF5cStuWuSW"
@@ -1631,6 +1633,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 4. **Train-Test Split (time-based)**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LJk_XhbkYLkU"
+      },
+      "id": "LJk_XhbkYLkU"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "ac82811c-bd5a-4b80-b16d-1a3db0e7c807",
@@ -1639,7 +1653,6 @@
       },
       "outputs": [],
       "source": [
-        "# 4. Train-Test Split (time-based)\n",
         "train_data = X_encoded[X['Year'] <= 2015].copy()\n",
         "test_data  = X_encoded[X['Year'] > 2015].copy()\n",
         "y_train = y[X['Year'] <= 2015]\n",
@@ -1687,6 +1700,16 @@
         "# 6. Sort results by R² (descending) for presentation\n",
         "results.sort(key=lambda x: x[3], reverse=True)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. **Model Training**"
+      ],
+      "metadata": {
+        "id": "oeu2XuvWZZOa"
+      },
+      "id": "oeu2XuvWZZOa"
     },
     {
       "cell_type": "code",
