--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -1704,54 +1704,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. **Model Training**"
+        "# 5. Model Training\n"
       ],
       "metadata": {
-        "id": "oeu2XuvWZZOa"
+        "id": "Yrj6e-33afLM"
       },
-      "id": "oeu2XuvWZZOa"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "953ccbfa-8c3d-4c6d-94e4-2c3557fc1f1e",
-      "metadata": {
-        "id": "953ccbfa-8c3d-4c6d-94e4-2c3557fc1f1e",
-        "outputId": "c0e41873-fd75-4ae4-916c-d7c6bf6011cd"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Model Performance on Test Set:\n",
-            "Model                 MAE      RMSE     R²\n",
-            "---------------------------------------------\n",
-            "Decision Tree         20.62    25.63    0.390\n",
-            "Random Forest         20.56    25.64    0.389\n",
-            "Gradient Boosting     21.17    26.17    0.364\n",
-            "Ridge Regression      22.64    27.54    0.295\n",
-            "MLP Regressor         22.91    27.55    0.295\n",
-            "Linear Regression     22.63    27.55    0.295\n",
-            "Lasso Regression      24.15    28.18    0.262\n",
-            "KNN Regressor         22.90    29.57    0.188\n",
-            "\n",
-            "Best Model: Decision Tree (R² = 0.390)\n"
-          ]
-        }
-      ],
-      "source": [
-        "# 7. Print model performance table and best model\n",
-        "print(\"Model Performance on Test Set:\")\n",
-        "print(f\"{'Model':20s}  MAE      RMSE     R²\")\n",
-        "print(\"-\" * 45)\n",
-        "for name, mae, rmse, r2 in results:\n",
-        "    print(f\"{name:20s}  {mae:.2f}    {rmse:.2f}    {r2:.3f}\")\n",
-        "\n",
-        "# Identify best model (highest R² score)\n",
-        "best_model_name, best_model_mae, best_model_rmse, best_model_r2 = results[0]\n",
-        "print(f\"\\nBest Model: {best_model_name} (R² = {best_model_r2:.3f})\")"
-      ]
+      "id": "Yrj6e-33afLM"
     },
     {
       "cell_type": "code",
