--- a/Proejct_eda_(2).ipynb
+++ b/Proejct_eda_(2).ipynb
@@ -41,11 +41,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# 1. Data Loading, Data Overview,Data Cleaning and Preparation"
+      ],
       "metadata": {
-        "id": "qB24GJyyLWRP"
+        "id": "DVjaOD5Gb-lF"
       },
-      "id": "qB24GJyyLWRP"
+      "id": "DVjaOD5Gb-lF"
     },
     {
       "cell_type": "code",
@@ -1571,14 +1573,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2. Data Cleaning and Reshaping\n",
-        "\n",
-        "\n"
+        "# 2. Data Reshaping"
       ],
       "metadata": {
-        "id": "nEF5cStuWuSW"
+        "id": "_6ov8a6WcejP"
       },
-      "id": "nEF5cStuWuSW"
+      "id": "_6ov8a6WcejP"
     },
     {
       "cell_type": "code",
