--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -36,12 +36,18 @@
         "import seaborn as sns\n",
         "\n",
         "# Set seaborn style for better visualization\n",
-        "plt.style.use('seaborn-darkgrid')\n",
-        "\n",
-        "#Insights:\n",
-        "#Imported pandas, numpy, matplotlib, and seaborn for data handling and visualization.\n",
-        "#These libraries help in data manipulation, statistical computations, and visual analysis."
+        "plt.style.use('seaborn-darkgrid')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: Imported pandas, numpy, matplotlib, and seaborn for data handling and visualization. These libraries help in data manipulation, statistical computations, and visual analysis."
+      ],
+      "metadata": {
+        "id": "T3bY46KXytho"
+      },
+      "id": "T3bY46KXytho"
     },
     {
       "cell_type": "code",
