--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -276,12 +276,18 @@
         "\n",
         "    # Display first few rows\n",
         "    df.head()\n",
-        "\n",
-        "    #Insights:\n",
-        "\n",
-        "    #The dataset contains country-wise agricultural water withdrawal percentages over time (1960-2023).\n",
-        "    #Metadata includes regions and income group classifications for better segmentation."
+        ""
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: The dataset contains country-wise agricultural water withdrawal percentages over time (1960-2023). Metadata includes regions and income group classifications for better segmentation."
+      ],
+      "metadata": {
+        "id": "4gNSUt6Pzvn9"
+      },
+      "id": "4gNSUt6Pzvn9"
     },
     {
       "cell_type": "code",
