--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -327,13 +327,19 @@
         "df['Year'] = pd.to_numeric(df['Year'], errors='coerce')\n",
         "\n",
         "# Display updated dataset structure\n",
-        "df.info()\n",
-        "\n",
-        "# Insights:\n",
-        "# Dropped redundant columns (Indicator Name, Indicator Code) as they contain static values.\n",
-        "# Converted the dataset from wide format to long format, making it easier for time-series analysis.\n",
-        "\n"
+        "df.info()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: Dropped redundant columns (Indicator Name, Indicator Code) as they contain static values. Converted the dataset from wide format to long format, making it easier for time-series analysis.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "pH8-5lxB0Li2"
+      },
+      "id": "pH8-5lxB0Li2"
     },
     {
       "cell_type": "code",
