--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -490,6 +490,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        " **Insights**: Merged region & income group to analyze geographic and economic factors. Added latest available water withdrawal values per country. Computed historical changes (1990-2020) to identify increasing or decreasing trends."
+      ],
+      "metadata": {
+        "id": "0Ie5aH3E0cIi"
+      },
+      "id": "0Ie5aH3E0cIi"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "d8dda87b-e35d-40bd-91c8-fc5101340183",
@@ -522,11 +532,7 @@
         "df['Agricultural Water Withdrawal (%)'] = df.groupby('Country Name')['Agricultural Water Withdrawal (%)'].ffill()\n",
         "\n",
         "# Check missing values\n",
-        "df.isnull().sum()\n",
-        "\n",
-        "# Insights:\n",
-        "# Missing values are forward-filled assuming gradual changes over time.\n",
-        "# Ensures time-series continuity without introducing major biases.\n"
+        "df.isnull().sum()"
       ]
     },
     {
