--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -645,12 +645,18 @@
         "summary_stats = df.describe()\n",
         "\n",
         "# Display statistical summary\n",
-        "summary_stats\n",
-        "\n",
-        "# Insights:\n",
-        "# The mean water withdrawal percentage is around 55%, with some countries relying heavily on agriculture (>90%).\n",
-        "# Data distribution is bimodal, with most countries either having low or high dependency."
+        "summary_stats\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: The mean water withdrawal percentage is around 55%, with some countries relying heavily on agriculture (>90%). Data distribution is bimodal, with most countries either having low or high dependency."
+      ],
+      "metadata": {
+        "id": "AyIw3nB8074t"
+      },
+      "id": "AyIw3nB8074t"
     },
     {
       "cell_type": "code",
