--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -785,11 +785,18 @@
         "                              (df['Agricultural Water Withdrawal (%)'].max() - df['Agricultural Water Withdrawal (%)'].min())\n",
         "\n",
         "# Display normalized dataset\n",
-        "df.head(5)\n",
-        "\n",
-        "# Normalized values help compare countries on a standard scale (0 to 1).\n",
-        "# Useful for clustering and machine learning models.\n"
+        "df.head(5)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **Insights**: Normalized values help compare countries on a standard scale (0 to 1). Useful for clustering and machine learning models.\n"
+      ],
+      "metadata": {
+        "id": "9Q0LsBN41NGt"
+      },
+      "id": "9Q0LsBN41NGt"
     },
     {
       "cell_type": "code",
