--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1205,13 +1205,18 @@
         "plt.title(\"Distribution of Agricultural Water Withdrawal (%)\")\n",
         "plt.xlabel(\"Agricultural Water Withdrawal (%)\")\n",
         "plt.ylabel(\"Frequency\")\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Insights:\n",
-        "# Bimodal distribution: Many countries either have very high (>80%) or very low (<20%) agricultural water withdrawals.\n",
-        "# Indicates that economic structure and climate affect water use patterns."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: Bimodal distribution: Many countries either have very high (>80%) or very low (<20%) agricultural water withdrawals. Indicates that economic structure and climate affect water use patterns."
+      ],
+      "metadata": {
+        "id": "XyKhfdPi2RbY"
+      },
+      "id": "XyKhfdPi2RbY"
     },
     {
       "cell_type": "code",
