--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1290,15 +1290,18 @@
         "plt.xlabel('Year')\n",
         "plt.ylabel('Agricultural Water Withdrawal (%)')\n",
         "plt.legend()\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Insights:\n",
-        "\n",
-        "# India remains consistently high (~90%), indicating continued reliance on irrigation.\n",
-        "# China has significantly reduced its agricultural water share (~85% to ~60% since 1980).\n",
-        "# Developed nations (e.g., USA, Australia) show a gradual decline, reflecting economic shifts."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: India remains consistently high (~90%), indicating continued reliance on irrigation. China has significantly reduced its agricultural water share (~85% to ~60% since 1980). Developed nations (e.g., USA, Australia) show a gradual decline, reflecting economic shifts."
+      ],
+      "metadata": {
+        "id": "dg28Js5V4sdr"
+      },
+      "id": "dg28Js5V4sdr"
     },
     {
       "cell_type": "code",
