--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1329,12 +1329,18 @@
         "plt.figure(figsize=(12, 8))\n",
         "sns.heatmap(df_corr, cmap=\"coolwarm\", annot=False)\n",
         "plt.title('Correlation Matrix of Agricultural Water Withdrawals Across Years')\n",
-        "plt.show()\n",
-        "\n",
-        "# Insights:\n",
-        "# High correlation (0.9+) across decades: Countries that had high water use in the 1990s still tend to have high values today.\n",
-        "# This indicates that agricultural water use is persistent over time."
+        "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: High correlation (0.9+) across decades: Countries that had high water use in the 1990s still tend to have high values today. This indicates that agricultural water use is persistent over time."
+      ],
+      "metadata": {
+        "id": "s0Tu9eKN5VYf"
+      },
+      "id": "s0Tu9eKN5VYf"
     },
     {
       "cell_type": "code",
