--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1369,11 +1369,18 @@
         "plt.xticks(rotation=45)\n",
         "plt.title(\"Agricultural Water Withdrawal (%) by Income Group\")\n",
         "plt.show()\n",
-        "\n",
-        "\n",
-        "# Low-income countries use ~90% of their water for agriculture, while high-income countries use only ~30%.\n",
-        "# Economic growth correlates with a shift away from agriculture-dominated water usage.\n"
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: Low-income countries use ~90% of their water for agriculture, while high-income countries use only ~30%. Economic growth correlates with a shift away from agriculture-dominated water usage.\n"
+      ],
+      "metadata": {
+        "id": "QM3F881W55u1"
+      },
+      "id": "QM3F881W55u1"
     },
     {
       "cell_type": "code",
