--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1412,13 +1412,18 @@
         "plt.xlabel(\"Year\")\n",
         "plt.ylabel(\"Agricultural Water Withdrawal (%)\")\n",
         "plt.legend(title=\"Region\", bbox_to_anchor=(1, 1))\n",
-        "plt.show()\n",
-        "\n",
-        "# Insights:\n",
-        "\n",
-        "# South Asia & Middle East remain high (~90%), indicating strong agricultural dependence.\n",
-        "# Europe & North America show a steady decline, suggesting a transition to industry & urban water use.\n"
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: South Asia & Middle East remain high (~90%), indicating strong agricultural dependence. Europe & North America show a steady decline, suggesting a transition to industry & urban water use.\n"
+      ],
+      "metadata": {
+        "id": "kn-ppRa16OJg"
+      },
+      "id": "kn-ppRa16OJg"
     },
     {
       "cell_type": "code",
