--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1459,11 +1459,18 @@
         "plt.xlabel(\"Year\")\n",
         "plt.ylabel(\"Agricultural Water Withdrawal (%)\")\n",
         "plt.legend()\n",
-        "plt.show()\n",
-        "\n",
-        "# This plot helps in understanding how water withdrawals have evolved over decades in the top agricultural water-consuming countries.\n",
-        "# Countries with high withdrawals may show stable, increasing, or declining trends depending on their economic and environmental policies."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insights**: This plot helps in understanding how water withdrawals have evolved over decades in the top agricultural water-consuming countries. Countries with high withdrawals may show stable, increasing, or declining trends depending on their economic and environmental policies."
+      ],
+      "metadata": {
+        "id": "U5HBINpX6ouQ"
+      },
+      "id": "U5HBINpX6ouQ"
     },
     {
       "cell_type": "code",
