--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1502,11 +1502,18 @@
         "plt.title(\"Heatmap of Agricultural Water Withdrawals Over Time\")\n",
         "plt.xlabel(\"Year\")\n",
         "plt.ylabel(\"Country\")\n",
-        "plt.show()\n",
-        "\n",
-        "# This heatmap visualizes temporal variations in agricultural water use for different countries.\n",
-        "# Darker shades indicate higher water withdrawal, helping to identify periods of extreme dependency."
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Insigts**: This heatmap visualizes temporal variations in agricultural water use for different countries. Darker shades indicate higher water withdrawal, helping to identify periods of extreme dependency"
+      ],
+      "metadata": {
+        "id": "sh6ajplN63PW"
+      },
+      "id": "sh6ajplN63PW"
     },
     {
       "cell_type": "code",
