--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -50,6 +50,16 @@
       "id": "T3bY46KXytho"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#1. Data Loading, Data Overview, Data Cleaning and Preparation"
+      ],
+      "metadata": {
+        "id": "Q7DbyZsV8FyG"
+      },
+      "id": "Q7DbyZsV8FyG"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "2691bbe9-5c40-49a7-9154-9fab5b9076ba",
