--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -490,13 +490,7 @@
         "df = df.merge(df_pivot[['Country Name', 'Change (1990-2020)']], on='Country Name', how='left')\n",
         "\n",
         "# Display feature engineered dataset\n",
-        "df.head()\n",
-        "\n",
-        "\n",
-        "# Insights:\n",
-        "# Merged region & income group to analyze geographic and economic factors.\n",
-        "# Added latest available water withdrawal values per country.\n",
-        "# Computed historical changes (1990-2020) to identify increasing or decreasing trends."
+        "df.head()\n"
       ]
     },
     {
@@ -1566,6 +1560,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 2. Data Cleaning and Reshaping\n"
+      ],
+      "metadata": {
+        "id": "MyU9-0jX9OQf"
+      },
+      "id": "MyU9-0jX9OQf"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "ba97ec19-776c-4577-b584-a9fd7dda0619",
@@ -1574,7 +1578,6 @@
       },
       "outputs": [],
       "source": [
-        "# 2. Data Cleaning and Reshaping\n",
         "# Filter out aggregate or regional entries by dropping rows with missing Region (non-country entries)\n",
         "merged = merged[~merged['Region'].isna()].copy()\n",
         "\n",
