--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1596,6 +1596,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Feature Encoding\n"
+      ],
+      "metadata": {
+        "id": "ifyOxfdw9goX"
+      },
+      "id": "ifyOxfdw9goX"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "72674e49-7eca-40fa-b4f7-f40b50ceb343",
@@ -1604,13 +1614,22 @@
       },
       "outputs": [],
       "source": [
-        "# 3. Feature Encoding\n",
         "# One-hot encode Region and IncomeGroup using pandas get_dummies\n",
         "features = ['Year', 'Region', 'IncomeGroup']\n",
         "X = long_df[features]\n",
         "y = long_df['WithdrawalPerc']\n",
         "X_encoded = pd.get_dummies(X, columns=['Region', 'IncomeGroup'], drop_first=False)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4. Train-Test Split (time-based)\n"
+      ],
+      "metadata": {
+        "id": "qdJ-DR3w9stB"
+      },
+      "id": "qdJ-DR3w9stB"
     },
     {
       "cell_type": "code",
@@ -1621,7 +1640,6 @@
       },
       "outputs": [],
       "source": [
-        "# 4. Train-Test Split (time-based)\n",
         "train_data = X_encoded[X['Year'] <= 2015].copy()\n",
         "test_data  = X_encoded[X['Year'] > 2015].copy()\n",
         "y_train = y[X['Year'] <= 2015]\n",
