--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1653,6 +1653,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 5. Model Training\n"
+      ],
+      "metadata": {
+        "id": "bYp-51Dr95uv"
+      },
+      "id": "bYp-51Dr95uv"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "075ad978-47af-4b2d-b1df-cdf108c14bf0",
@@ -1661,7 +1671,6 @@
       },
       "outputs": [],
       "source": [
-        "# 5. Model Training\n",
         "models = [\n",
         "    (\"Linear Regression\", LinearRegression()),\n",
         "    (\"Ridge Regression\", Ridge(random_state=0)),\n",
