--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1693,9 +1693,19 @@
         "    rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
         "    r2 = r2_score(y_test, y_pred)\n",
         "    results.append((name, mae, rmse, r2))\n",
-        "# 6. Sort results by R² (descending) for presentation\n",
+        "#  Sort results by R² (descending) for presentation\n",
         "results.sort(key=lambda x: x[3], reverse=True)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6. Model Performance Table and Best Model"
+      ],
+      "metadata": {
+        "id": "FoHOgOu4-knx"
+      },
+      "id": "FoHOgOu4-knx"
     },
     {
       "cell_type": "code",
@@ -1727,7 +1737,7 @@
         }
       ],
       "source": [
-        "# 7. Print model performance table and best model\n",
+        "# Print model performance table and best model\n",
         "print(\"Model Performance on Test Set:\")\n",
         "print(f\"{'Model':20s}  MAE      RMSE     R²\")\n",
         "print(\"-\" * 45)\n",
