--- a/Agriculture_Freshwater_Withdrawal_.ipynb
+++ b/Agriculture_Freshwater_Withdrawal_.ipynb
@@ -1771,6 +1771,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 7. Model Tuning and Evaluation with Decision Tree Regressor"
+      ],
+      "metadata": {
+        "id": "WnPK4uWGAowo"
+      },
+      "id": "WnPK4uWGAowo"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "abade4f4-a014-4244-923e-79aa8e7194ef",
